--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "FrontEnd:build"
+            "browserTarget": "FrontEnd:build",
+            "proxyConfig":"proxy.conf.json"
           }
         },
         "test": {
