--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "ng-circle-progress": "^1.7.1",
     "rxjs": "~7.8.0",
